# sqlalchemy_project

./: README.md  create_tables.py  inventory.db  pyproject.toml
