[project]
name = "aula17"
version = "0.1.0"
description = ""
authors = [
    {name = "Cristina Salib",email = "76428607+CristinaSalib@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
